# twittergram

./: .dockerignore  .gitignore  .mise.toml  Chart.yaml  Dockerfile  Makefile  README.md  pyproject.toml  values.yaml
.github/workflows/: workflow.yml
chart/: Chart.yaml  values.yaml
chart/templates/: bluesky-advent.yaml  bluesky-hotzo.yaml  bluesky-probahn.yaml  cronjobs.yaml  debug.yaml  mail-dart.yaml  mail-flutter.yaml  reddit-schneckedertzchen.yaml  service-account.yaml  toot-hotzo.yaml  xcode.yaml
chart/templates/config/: base.yaml  mastodon.yaml  reddit.yaml
chart/templates/secrets/: base.yaml  bluesky.yaml  mail.yaml  mastodon.yaml  reddit.yaml
src/tests/: config_test.py  stub_test.py  test_config.py
src/twittergram/: __main__.py  application.py  cli.py  config.py  downloader.py  forward_tweets.py  init.py  state_repo.py  twitter_reader.py
src/twittergram/application/: __init__.py
src/twittergram/application/exceptions/: io.py  media.py
src/twittergram/application/model/: __init__.py  bluesky.py  mail.py  media.py  reddit.py  rss.py  state.py  toot.py  xcode.py
src/twittergram/application/ports/: __init__.py  bluesky_reader.py  gallery_downloader.py  html_sanitizer.py  mail_reader.py  mastodon_reader.py  media_downloader.py  reddit_reader.py  rss_reader.py  telegram_uploader.py  twitter_downloader.py  twitter_reader.py  xcode_release_reader.py
src/twittergram/application/repos/: __init__.py  state.py
src/twittergram/application/use_cases/: __init__.py  forward_bluesky_posts.py  forward_mails.py  forward_reddit_posts.py  forward_rss_feed.py  forward_toots.py  forward_tweets.py  forward_xcode.py
src/twittergram/domain/model/: __init__.py  bluesky.py  mail.py  media.py  state.py  toot.py  tweet.py  url.py
src/twittergram/domain/value_objects/: __init__.py  media_file.py
src/twittergram/infrastructure/adapters/bluesky_reader/: __init__.py  atproto.py
src/twittergram/infrastructure/adapters/html_sanitizer/: __init__.py  naive.py
src/twittergram/infrastructure/adapters/mail_reader/: __init__.py  jmapc.py
src/twittergram/infrastructure/adapters/mastodon_reader/: __init__.py  mastodon_py.py
src/twittergram/infrastructure/adapters/media_downloader/: __init__.py  gallery_dl.py  http.py
src/twittergram/infrastructure/adapters/reddit_reader/: __init__.py  praw.py
src/twittergram/infrastructure/adapters/rss_reader/: __init__.py  rss_parser.py
src/twittergram/infrastructure/adapters/telegram_uploader/: __init__.py  ptb.py
src/twittergram/infrastructure/adapters/twitter_downloader/: __init__.py  gallery_dl.py  tweepy.py
src/twittergram/infrastructure/adapters/twitter_reader/: __init__.py  tweepy.py
src/twittergram/infrastructure/adapters/xcode_release_reader/: __init__.py  xcode_releases_com.py
src/twittergram/infrastructure/repos/state_repo/: __init__.py  bs.py  file.py
src/twittergram/interface/cli/: app.py
templates/: config.yaml  debug.yaml  mail-dart.yaml  mail-flutter.yaml  reddit-schneckedertzchen.yaml  secrets.yaml  state-pvc.yaml  toot-hotzo.yaml  tweet-ai.yaml  tweet-hotzo.yaml  tweet-original.yaml  tweet.yaml  xcode.yaml
templates/config/: base.yaml  cm-state.yaml  mastodon.yaml
templates/secrets/: base.yaml  mail.yaml  mastodon.yaml  reddit.yaml  twitter.yaml
