[tool.poetry]
name = "twittergram"
description = "Sends telegrams"
version = "1.0.0"
authors = ["Blindfolded Surgery <team@blindfolded.surgery>"]
license = "MIT"

[tool.poetry.scripts]
twittergram = "twittergram.interface.cli.app:main"

[[tool.poetry.source]]
name = "internal"
url = "https://pypi.bjoernpetersen.net"
priority = "explicit"

[tool.poetry.dependencies]
# Version is constrained by asyncpraw
aiofiles = "*"
asyncpraw = "^7.7.1"
atproto = "0.0.49"
bs-config = { version = "1.0.2", extras = ["dotenv"], source = "internal" }
bs-state = { version = "0.2.1", extras = ["file", "kubernetes"], source = "internal" }
click = "^8.1.3"
Deprecated = "^1.2.13"
httpx = "*"
injector = "^0.22.0"
jmapc = "^0.2.13"
mastodon-py = "^1.8.0"
more-itertools = "^10.0.0"
pendulum = "^3.0.0"
pydantic = "^2.4.2"
python = "~3.12"
# Dicated by atproto because of a common tight httpx constraint.
python-telegram-bot = "*"
sentry-sdk = "^2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
pytest = "^8.0.0"
ruff = "0.5.6"
types-aiofiles = "^22.1.0"
types-Deprecated = "^1.2.9"
types-requests = "^2.31.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

strict = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "atproto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atproto_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mastodon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpraw.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff.lint]
extend-select = [
    "I001",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
