[project]
requires-python = "==3.13.*"
name = "twittergram"
description = "Sends telegrams"
version = "1.0.0"
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    # Version constrained by asyncpraw
    "aiofiles",
    "asyncpraw >=7, <8",
    "atproto ==0.0.61",
    "bs-config [dotenv] ==1.1.1",
    "bs-state [file,kubernetes] ==2.2.1",
    "click >=8, <9",
    "Deprecated >=1, <2",
    "httpx",
    "injector ==0.22.*",
    "jmapc ==0.2.*",
    "mastodon-py >=2, <3",
    "more-itertools >=10, <11",
    "pydantic ==2.11.*",
    "python-telegram-bot ==22.3",
    "rss-parser ==2.1.1",
    "sentry-sdk >=2, <3",
    "uvloop ==0.21.*",
]

[dependency-groups]
dev = [
    "mypy ==1.17.*",
    "pytest >=8.0.0, <9.0.0",
    "ruff ==0.12.5",
    "types-aiofiles >=24.1.0.0, <24.2.0",
    "types-Deprecated >=1.0.0, <2.0.0",
    "types-requests >=2.31, <3",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["pydantic.mypy"]

strict = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "atproto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atproto_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mastodon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpraw.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
