[project]
requires-python = "==3.13.*"
name = "twittergram"
description = "Sends telegrams"
version = "1.0.0"
authors = [{ name = "Björn Petersen", email = "git@bjoernpetersen.net" }]
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Private :: Do Not Upload",
]

dependencies = [
    # Version constrained by asyncpraw
    "aiofiles >=25, <26",
    "asyncpraw >=7, <8",
    "atproto ==0.0.63",
    "bs-config [dotenv] ==3.4.0",
    "bs-state [file,kubernetes] ==3.0.0",
    "click >=8, <9",
    "gallery-dl ==1.30.10",
    "httpx",
    "injector ==0.22.*",
    "jmapc ==0.2.*",
    "mastodon-py >=2, <3",
    "more-itertools >=10, <11",
    "pydantic ==2.12.*",
    "python-telegram-bot ==22.5",
    "rss-parser ==2.1.1",
    "sentry-sdk >=2, <3",
    "uvloop ==0.22.*",
]

[dependency-groups]
dev = [
    "mypy ==1.18.*",
    "pytest >=8, <9",
    "ruff ==0.14.3",
    "types-aiofiles >=25, <26",
    "types-requests >=2.31, <3",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

strict = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "atproto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atproto_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mastodon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpraw.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
